--- a/bitmap_font/bitmap_font.html
+++ b/bitmap_font/bitmap_font.html
@@ -10,5 +10,8 @@
       <div id="dropzone">
       drag your bitmask image here
       </div>
+      <br>
+      <pre id="output">
+      </pre>
    </body>
 </html>
