--- a/bitmap_font/bitmap_font.html
+++ b/bitmap_font/bitmap_font.html
@@ -6,12 +6,14 @@
       <link rel="stylesheet" type="text/css" href="bitmap_font.css">
    </head>
    <body>
-      
-      <div id="dropzone">
-      drag your bitmask image here
+      <div class="content">
+         Type the letters in the font: <input type="text" id="letters"><br><br>
+         <div id="dropzone">
+         drag the font image here
+         </div>
+         <br>
+         <pre id="output">
+         </pre>
       </div>
-      <br>
-      <pre id="output">
-      </pre>
    </body>
 </html>
